# multi-chat-interface-rag-backend

./: .env  .gitignore  README.md  main.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: 0abf8db8bcbc_modified_vector_size_to_1024_to_support_.py  3d51ff865c38_updated_document_chunks_with_cmetada_.py  446931f8516f_initial_migration.py  92a7e48db1e0_added_documents_document_chunks_models.py  9ac97fbb53fc_added_name_to_the_user_and_added_.py
sql-files/: pgvector-init.sql
src/auth/: auth_deps.py  auth_models.py  auth_passlib.py
src/core/: config.py  env_enums.py
src/db/: connection.py  db_deps.py
src/embeddings/: base_embedding.py  factory.py  gemini_embedding.py  openai_embedding.py
src/models/: __init__.py  conversation_model.py  document_chunk_model.py  document_model.py  enums.py  message_model.py  user_model.py  user_session_model.py
src/repositories/: conversation_repository.py  document_chunk_repository.py  document_repository.py  message_repository.py  user_repository.py  user_session_repository.py
src/routers/: conversation_router.py  document_router.py  llm_router.py  message_router.py  routers_deps.py  user_router.py
src/schemas/: base_schema.py  conversation_schema.py  document_chunk_schema.py  document_schema.py  llm_schema.py  message_schema.py  user_schema.py
src/services/: conversation_service.py  document_service.py  llm_service.py  message_service.py  user_service.py
src/utilities/: chat_message_utility.py  document_utility.py  embedding_utility.py  file_upload_utility.py  llm_model_utility.py  prompt_utility.py  (+1 more)
(+2 files in other folders)
