[project]
name = "multi-chat-interface-rag-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "black>=25.12.0",
    "fastapi[standard]>=0.127.1",
    "greenlet>=3.3.0",
    "isort>=7.0.0",
    "passlib>=1.7.4",
    "pgvector>=0.4.2",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
]
